--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 API_KEY = EieeSU2xEIBBYS2Jt7XTn9w2R
 API_SECRET_KEY = lZmCvPiGL3xIjTzanmliogkQ4matNNRtAXnRwW7U9xWPLyNnZV
 BEARER_TOKEN = AAAAAAAAAAAAAAAAAAAAAOAymgEAAAAA3JGbTztcczn3iCTeRlh1ERMQw6k%3DD7YOmE61V3W769mwXdcWs7Q860qlMEcw6WrSCUtyT5b7iCMbjV
+CLIENT_ID=OHFabEo2aTd2VUxCTlo3NzdzS0M6MTpjaQ
+CLIENT_SECRET=08klXdicIabLZm2LQ5ow7AI7KOKxySOm6pvpMzbtoy1B2bSB3c
