--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.5",
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-twitter-auth": "0.0.13",
+    "react-twitter-embed": "^4.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
