--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-twitter-auth": "0.0.13",
     "react-twitter-embed": "^4.0.4",
+    "simple-react-validator": "^1.6.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
