--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "firebase": "^9.19.1",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-twitter-auth": "0.0.13",
     "react-twitter-embed": "^4.0.4",
     "simple-react-validator": "^1.6.2",
     "typescript": "^4.9.5",
+    "upiqr": "^1.0.32",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
