--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "firebase": "^9.19.1",
+    "luxon": "^3.3.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
