--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-twitter-auth": "0.0.13",
     "react-twitter-embed": "^4.0.4",
     "simple-react-validator": "^1.6.2",
+    "timeago-react": "^3.0.6",
     "typescript": "^4.9.5",
     "upiqr": "^1.0.32",
     "web-vitals": "^2.1.4"
