--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.10.0",
+    "react-scratchcard-v2": "^1.1.1",
     "react-scripts": "5.0.1",
     "react-twitter-auth": "0.0.13",
     "react-twitter-embed": "^4.0.4",
