--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-twitter-auth": "0.0.13",
     "react-twitter-embed": "^4.0.4",
+    "sendbird": "^3.1.32",
     "simple-react-validator": "^1.6.2",
     "timeago-react": "^3.0.6",
     "typescript": "^4.9.5",
